# harvest

./: .dockerignore  Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml
agent/: Cargo.toml
agent/src/: config.rs  console.rs  executor.rs  main.rs  sse_client.rs  tunnel.rs  ws_url.rs
documentation/: snap.md
documentation/developer/: architecture.md  dev-setup.md  harvester.md  server.md
knowledge-harvester/: Cargo.toml  harvester.toml
knowledge-harvester/src/: config.rs  git.rs  lib.rs  main.rs  pipeline.rs
knowledge-harvester/src/documentation/: llm.rs  mod.rs  retry.rs  workflow.rs
knowledge-harvester/src/graph/: model.rs  writer.rs
knowledge-harvester/src/parser/: language.rs  mod.rs
knowledge-harvester/tests/: git_client.rs  graph_writer.rs
knowledge-server/: Cargo.toml  Dockerfile  docker-entrypoint.sh  server.toml
knowledge-server/skills/: canonical-k8s.md  ceph.md  juju.md  landscape.md  lxd.md  openstack.md
knowledge-server/src/: config.rs  lib.rs  main.rs  neo4j.rs
knowledge-server/src/admin/: handlers.rs
knowledge-server/src/agent/: chain.rs  graph_tools.rs  lxd_tools.rs  machine_tools.rs  mod.rs  port_forward_tools.rs  prompt.rs  secret_tools.rs  skill_tools.rs  tool.rs
knowledge-server/src/api/: docs.rs  graph.rs  llm.rs  mod.rs  query.rs  repositories.rs  tool_description.rs
knowledge-server/src/auth/: handlers.rs  jwt.rs  mod.rs  oidc.rs  password.rs
knowledge-server/src/conversations/: handlers.rs  mod.rs  title_generation.rs
knowledge-server/src/llm/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs  retry.rs  types.rs
knowledge-server/src/lxd/: identity.rs  mod.rs
knowledge-server/src/machines/: handlers.rs  lxd_provision.rs  mod.rs  port_forwards.rs  proxy.rs
knowledge-server/src/overview/: handlers.rs  mod.rs  pipeline.rs
knowledge-server/src/projects/: handlers.rs  memory_gen.rs  mod.rs  suggestions.rs  task_graph.rs
knowledge-server/src/skills/: handlers.rs  mod.rs
knowledge-server/tests/: api.rs  auth_oidc.rs  graph_tools.rs  lxd_identity.rs  machines.rs  memories.rs  overview.rs  port_forwards.rs  projects.rs  skills.rs  tasks.rs
snap/: snapcraft.yaml
snap/hooks/: configure  install
snap/local/: Caddyfile  gen-llm-config.py  nginx.conf.template  repositories.toml.example  wrapper-harvest  wrapper-ingest-code  wrapper-serve  wrapper-server  wrapper-ui
web-ui/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  test-waiting.mjs  vite.config.js
web-ui/src/: App.vue  admin.js  agents.js  api.js  auth.js  chat.js  conversations.js  documentation.js  format.js  graph-utils.js  inline-graph.js  layout-worker.js  main.js  markdown.js  memories.js  overview.js  projects.js  repositories.js  secrets.js  source-panel.js  style.css  task-graph.js  tasks.js  theme.js  tool-render.js  utils.js  vanilla.scss
web-ui/src/components/: SourcePanel.vue
web-ui/src/components/agents/: ProvisionSteps.vue
web-ui/src/components/chat/: ChatMessage.vue  LlmModelPicker.vue  ThinkingBlock.vue  ToolCallStep.vue
web-ui/src/composables/: useConsoleSocket.js  useSse.js
web-ui/src/lib/: api.js  format.js  inline-graph.js  lxd-provision.js  markdown.js  style.css  task-graph.js  tool-verbs.js  utils.js
web-ui/src/router/: index.js
web-ui/src/stores/: auth.js  chat.js  llm.js  project.js  theme.js
web-ui/src/views/: AdminView.vue  AgentConsoleView.vue  AgentsView.vue  ChatView.vue  DocumentationView.vue  LoginView.vue  MemoriesView.vue  RegisterView.vue  RepositoriesView.vue  SkillsView.vue  TasksView.vue
web-ui/tests/: agents.test.js  api.test.js  chat.test.js  documentation.test.js  format.test.js  markdown.test.js  overview.test.js  setup.js  task-graph.test.js  tasks.test.js  theme.test.js
web-ui/tests/components/: AdminView.test.js  AgentConsoleView.test.js  AgentsView.test.js  ChatMessage.test.js  ChatView.test.js  DocumentationView.test.js  LlmModelPicker.test.js  LoginView.test.js  MemoriesView.test.js  RegisterView.test.js  RepositoriesView.test.js  SkillsView.test.js  TasksView.test.js  ThinkingBlock.test.js
web-ui/tests/composables/: useConsoleSocket.test.js  useSse.test.js
web-ui/tests/lib/: api.test.js  inline-graph.test.js  lxd-provision.test.js  tool-verbs.test.js
web-ui/tests/stores/: auth.test.js  chat.test.js  llm.test.js  project.test.js  theme.test.js
