[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "harvest-agent"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname     = "0.3"
clap         = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
