[package]
name = "knowledge-harvester"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
futures      = "0.3"

# Error handling
anyhow       = "1"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# CLI
clap         = { version = "4", features = ["derive"] }

# Git
git2         = { version = "0.20", features = ["vendored-openssl"] }

# Code parsing
tree-sitter              = "0.22"
tree-sitter-rust         = "0.21"
tree-sitter-python       = "0.21"
tree-sitter-javascript   = "0.21"
tree-sitter-typescript   = "0.21"
tree-sitter-go           = "0.21"
tree-sitter-c            = "0.21"
tree-sitter-cpp          = "0.21"

# Graph database
neo4rs       = { version = "0.7", features = ["json"] }

# File walking
walkdir      = "2"
ignore       = "0.4"   # respects .gitignore when walking

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (LLM API calls)
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async trait support
async-trait  = "0.1"

[dev-dependencies]
neo4j_testcontainers = "0.3"
tempfile = "3.27.0"
testcontainers = "0.16"
