[package]
name = "knowledge-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Error handling
anyhow       = "1"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# CLI
clap         = { version = "4", features = ["derive"] }

# HTTP server
axum         = { version = "0.7", features = ["json", "macros"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (LLM API calls)
reqwest      = { version = "0.12", features = ["json"] }

# Graph database
neo4rs       = "0.7"

# Text processing
regex        = "1"

# Async trait support
async-trait  = "0.1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
