[package]
name = "knowledge-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Error handling
anyhow       = "1"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# CLI
clap         = { version = "4", features = ["derive"] }

# HTTP server
axum         = { version = "0.7", features = ["json", "macros"] }
futures      = { version = "0.3", default-features = false, features = ["std"] }
tower        = { version = "0.4", features = ["util"] }
tower-http   = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (LLM API calls)
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Graph database
neo4rs       = "0.7"

# Text processing
regex        = "1"

# Async trait support
async-trait  = "0.1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
httpmock = "0.8.3"
neo4j_testcontainers = "0.3"
tempfile = "3"
testcontainers = "0.16"
