[package]
name = "knowledge-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Error handling
anyhow       = "1"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# CLI
clap         = { version = "4", features = ["derive"] }

# HTTP server
axum         = { version = "0.7", features = ["json", "macros", "ws"] }
futures      = { version = "0.3", default-features = false, features = ["std"] }
tower        = { version = "0.4", features = ["util"] }
tower-http   = { version = "0.5", features = ["cors", "trace"] }

# Machines / agent registry
dashmap      = "5"
sha2         = "0.10"

# HTTP client (LLM API calls)
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Graph database
neo4rs       = "0.7"

# Text processing
regex        = "1"

# Async trait support
async-trait  = "0.1"

# Auth
argon2       = "0.5"
base64       = { version = "0.22", features = ["alloc"] }
jsonwebtoken = "10"
axum-extra   = { version = "0.9", features = ["cookie"] }
rand_core    = { version = "0.6", features = ["getrandom"] }
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
time         = "0.3"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util       = "0.1.3"
httpmock             = "0.8.3"
neo4j_testcontainers = "0.3"
tempfile             = "3"
testcontainers       = "0.16"
futures-util         = "0.3"
reqwest              = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
